Nav overflow fix on mobile pt 17

--- a/blocks/src/blocks/mobile-container/style.scss
+++ b/blocks/src/blocks/mobile-container/style.scss
@@ -110,7 +110,7 @@
     @media (max-width: 768px) {
         overflow-y: scroll;
         height: 100vh;
-        height: 100dvh;
+        height: 100svh;
     }
 }
 
